--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="title_add">Add Comic</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_settings">Settings</string>
+    <string name="name">Name</string>
+    <string name="author">Author</string>
+    <string name="series">Series</string>
+    <string name="year">Year</string>
+    <string name="choose_file">Choose File...</string>
 </resources>
