--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="choose_file">Choose File...</string>
     <string name="left_arrow">&lt;</string>
     <string name="right_arrow">&gt;</string>
+    <string name="save">Save</string>
+    <string name="comic_id">comic id</string>
 </resources>
